Replaced proxyon and replyWithMatching attributes with serviceResponseType, which consolidates many logic blocks and is more extensible if we want to add another type of response style. And, as always, many ui tweaks for color and layout